--- a/button.html
+++ b/button.html
@@ -137,6 +137,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CButtonPtr%2CGLfloat%2CGLfloat"
     title="draw(self: ButtonPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">ButtonPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CButtonPtr%2CButtonObj"
+    title="duplicate(self: ButtonPtr; obj: var ButtonObj): ButtonPtr"><wbr />duplicate<span class="attachedType">ButtonPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CButtonPtr%2CInputEvent%2CNodePtr"
     title="handle(self: ButtonPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">ButtonPtr</span></a></li>
 
@@ -191,14 +193,31 @@ function main() {
 <dt><pre><span class="Keyword">proc</span> <a href="#Button%2Cstring%2CButtonObj"><span class="Identifier">Button</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new Button node pointer.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ButtonObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">my_button_obj</span><span class="Other">:</span> <span class="Identifier">ButtonObj</span>
+  <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">Button</span><span class="Other">(</span><span class="StringLit">&quot;Button&quot;</span><span class="Other">,</span> <span class="Identifier">my_button_obj</span><span class="Other">)</span></pre>
 
 </dd>
 <a id="Button,ButtonObj"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#Button%2CButtonObj"><span class="Identifier">Button</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new Button node pointer with default node name &quot;Button&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ButtonObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">my_button_obj</span><span class="Other">:</span> <span class="Identifier">ButtonObj</span>
+  <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">Button</span><span class="Other">(</span><span class="Identifier">my_button_obj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -211,7 +230,15 @@ function main() {
                                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
+</dd>
+<a id="duplicate.e,ButtonPtr,ButtonObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CButtonPtr%2CButtonObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Duplicates Button object and creates a new Button node pointer.
 
 </dd>
 <a id="handle.e,ButtonPtr,InputEvent,NodePtr"></a>
@@ -219,7 +246,7 @@ function main() {
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Handles user input. This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
 
@@ -232,7 +259,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-19 14:45:57 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:06:48 UTC</small>
       </div>
     </div>
   </div>
