--- a/rich_edit_text.html
+++ b/rich_edit_text.html
@@ -137,10 +137,14 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#draw.e%2CRichEditTextPtr%2CGLfloat%2CGLfloat"
+      <li><a class="reference" href="#getTextSize.e%2CRichEditTextPtr"
+    title="getTextSize(self: RichEditTextPtr): Vector2Ref"><wbr />get<wbr />Text<wbr />Size<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#getLine.e%2CRichEditTextPtr"
+    title="getLine(self: RichEditTextPtr): int"><wbr />get<wbr />Line<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#draw.e%2CRichEditTextPtr%2CGLfloat%2CGLfloat"
     title="draw(self: RichEditTextPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">RichEditTextPtr</span></a></li>
-  <li><a class="reference" href="#dublicate.e%2CRichEditTextPtr%2CRichEditTextObj"
-    title="dublicate(self: RichEditTextPtr; obj: var RichEditTextObj): RichEditTextPtr"><wbr />dublicate<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CRichEditTextPtr%2CRichEditTextObj"
+    title="duplicate(self: RichEditTextPtr; obj: var RichEditTextObj): RichEditTextPtr"><wbr />duplicate<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CRichEditTextPtr%2CInputEvent%2CNodePtr"
     title="handle(self: RichEditTextPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichEditTextPtr%2CAnchorRef"
@@ -204,7 +208,16 @@ function main() {
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new RichEditText pointer.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a RichEditTextObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">RichEditTextObj</span>
+  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichEditText</span><span class="Other">(</span><span class="StringLit">&quot;RichEditText&quot;</span><span class="Other">,</span> <span class="Identifier">textobj</span><span class="Other">)</span></pre>
 
 </dd>
 <a id="RichEditText,RichEditTextObj"></a>
@@ -212,7 +225,15 @@ function main() {
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new RichEditText pointer with default node name &quot;RichEditText&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a RichEditTextObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">RichEditTextObj</span>
+  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">RichEditText</span><span class="Other">(</span><span class="Identifier">textobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -220,20 +241,34 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
+<a id="getTextSize.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getTextSize.e%2CRichEditTextPtr"><span class="Identifier">getTextSize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns text size.
+
+</dd>
+<a id="getLine.e,RichEditTextPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#getLine.e%2CRichEditTextPtr"><span class="Identifier">getLine</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns current caret line.
+
+</dd>
 <a id="draw.e,RichEditTextPtr,GLfloat,GLfloat"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CRichEditTextPtr%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="dublicate.e,RichEditTextPtr,RichEditTextObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#dublicate.e%2CRichEditTextPtr%2CRichEditTextObj"><span class="Identifier">dublicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_edit_text.html#RichEditTextObj"><span class="Identifier">RichEditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="duplicate.e,RichEditTextPtr,RichEditTextObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CRichEditTextPtr%2CRichEditTextObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_edit_text.html#RichEditTextObj"><span class="Identifier">RichEditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Duplicates RichEditText and create a new RichEditText pointer.
 
 </dd>
 <a id="handle.e,RichEditTextPtr,InputEvent,NodePtr"></a>
@@ -241,7 +276,7 @@ function main() {
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Handles user input. This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
 <a id="setTextAlign.e,RichEditTextPtr,AnchorRef"></a>
@@ -264,7 +299,7 @@ Changes text align.
 <dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CRichEditTextPtr%2CColorTextRef"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <a href="color_text.html#ColorTextRef"><span class="Identifier">ColorTextRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Changes RichEditText text.
 
 </dd>
 
@@ -277,7 +312,7 @@ Changes text align.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-23 06:31:07 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:36:28 UTC</small>
       </div>
     </div>
   </div>
