--- a/scene.html
+++ b/scene.html
@@ -128,6 +128,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#drawScene.e%2CScenePtr%2CGLfloat%2CGLfloat%2Cbool"
     title="drawScene(scene: ScenePtr; w, h: GLfloat; paused: bool)"><wbr />draw<wbr />Scene<span class="attachedType">ScenePtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CScenePtr%2CSceneObj"
+    title="duplicate(self: ScenePtr; obj: var SceneObj): ScenePtr"><wbr />duplicate<span class="attachedType">ScenePtr</span></a></li>
   <li><a class="reference" href="#enter.e%2CScenePtr"
     title="enter(scene: ScenePtr)"><wbr />enter<span class="attachedType">ScenePtr</span></a></li>
   <li><a class="reference" href="#exit.e%2CScenePtr"
@@ -178,13 +180,22 @@ function main() {
 <dt><pre><span class="Keyword">proc</span> <a href="#Scene%2Cstring%2CSceneObj"><span class="Identifier">Scene</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-Creates a new Scene pointer.
+<p>Creates a new Scene pointer.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a scene name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SceneObj object.</li>
+</ul>
+
 
 </dd>
 <a id="Scene,SceneObj"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#Scene%2CSceneObj"><span class="Identifier">Scene</span></a><span class="Other">(</span><span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new Scene pointer with default scene name &quot;Scene&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SceneObj object.</li>
+</ul>
 
 
 </dd>
@@ -201,18 +212,25 @@ Creates a new Scene pointer.
 Draws scene This used in the window.nim.
 
 </dd>
+<a id="duplicate.e,ScenePtr,SceneObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CScenePtr%2CSceneObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scene.html#SceneObj"><span class="Identifier">SceneObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Duplicates Scene object and create a new Scene pointer.
+
+</dd>
 <a id="enter.e,ScenePtr"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#enter.e%2CScenePtr"><span class="Identifier">enter</span></a><span class="Other">(</span><span class="Identifier">scene</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+This called when scene was changed.
 
 </dd>
 <a id="exit.e,ScenePtr"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#exit.e%2CScenePtr"><span class="Identifier">exit</span></a><span class="Other">(</span><span class="Identifier">scene</span><span class="Other">:</span> <a href="scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+This called when scene was changed.
 
 </dd>
 <a id="handleScene.e,ScenePtr,InputEvent,NodePtr,bool"></a>
@@ -220,7 +238,7 @@ Draws scene This used in the window.nim.
                   <span class="Identifier">paused</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Handles user input. This called on any input.
 
 </dd>
 <a id="reAnchorScene.e,ScenePtr,GLfloat,GLfloat,bool"></a>
@@ -228,7 +246,7 @@ Draws scene This used in the window.nim.
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Recalculates node positions.
 
 </dd>
 
@@ -241,7 +259,7 @@ Draws scene This used in the window.nim.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-19 14:45:38 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 16:00:51 UTC</small>
       </div>
     </div>
   </div>
