--- a/slider.html
+++ b/slider.html
@@ -131,8 +131,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CSliderPtr%2CGLfloat%2CGLfloat"
     title="draw(self: SliderPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">SliderPtr</span></a></li>
-  <li><a class="reference" href="#dublicate.e%2CSliderPtr%2CSliderObj"
-    title="dublicate(self: SliderPtr; obj: var SliderObj): SliderPtr"><wbr />dublicate<span class="attachedType">SliderPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CSliderPtr%2CSliderObj"
+    title="duplicate(self: SliderPtr; obj: var SliderObj): SliderPtr"><wbr />duplicate<span class="attachedType">SliderPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CSliderPtr%2Cuint"
     title="setMaxValue(self: SliderPtr; value: uint)"><wbr />set<wbr />Max<wbr />Value<span class="attachedType">SliderPtr</span></a></li>
   <li><a class="reference" href="#setProgress.e%2CSliderPtr%2Cuint"
@@ -187,14 +187,31 @@ function main() {
 <dt><pre><span class="Keyword">proc</span> <a href="#Slider%2Cstring%2CSliderObj"><span class="Identifier">Slider</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new Slider pointer.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SliderObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">scobj</span><span class="Other">:</span> <span class="Identifier">SliderObj</span>
+  <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Slider</span><span class="Other">(</span><span class="StringLit">&quot;Slider&quot;</span><span class="Other">,</span> <span class="Identifier">scobj</span><span class="Other">)</span></pre>
 
 </dd>
 <a id="Slider,SliderObj"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#Slider%2CSliderObj"><span class="Identifier">Slider</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new Slider pointer with default node name &quot;Slider&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a SliderObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">scobj</span><span class="Other">:</span> <span class="Identifier">SliderObj</span>
+  <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Slider</span><span class="Other">(</span><span class="Identifier">scobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -207,29 +224,29 @@ function main() {
                                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="dublicate.e,SliderPtr,SliderObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#dublicate.e%2CSliderPtr%2CSliderObj"><span class="Identifier">dublicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<a id="duplicate.e,SliderPtr,SliderObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CSliderPtr%2CSliderObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Duplicates Sider object and create a new Slider pointer.
 
 </dd>
 <a id="setMaxValue.e,SliderPtr,uint"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setMaxValue.e%2CSliderPtr%2Cuint"><span class="Identifier">setMaxValue</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Changes max value.
 
 </dd>
 <a id="setProgress.e,SliderPtr,uint"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setProgress.e%2CSliderPtr%2Cuint"><span class="Identifier">setProgress</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderPtr"><span class="Identifier">SliderPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Changes progress.
 
 </dd>
 <a id="setProgressColor.e,SliderPtr,ColorRef"></a>
@@ -244,7 +261,7 @@ Changes progress color. For change background color use <tt class="docutils lite
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Handles user input. This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
 
@@ -257,7 +274,7 @@ Changes progress color. For change background color use <tt class="docutils lite
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-24 02:59:01 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:43:56 UTC</small>
       </div>
     </div>
   </div>
