--- a/vslider.html
+++ b/vslider.html
@@ -131,8 +131,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CVSliderPtr%2CGLfloat%2CGLfloat"
     title="draw(self: VSliderPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">VSliderPtr</span></a></li>
-  <li><a class="reference" href="#dublicate.e%2CVSliderPtr%2CVSliderObj"
-    title="dublicate(self: VSliderPtr; obj: var VSliderObj): VSliderPtr"><wbr />dublicate<span class="attachedType">VSliderPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CVSliderPtr%2CVSliderObj"
+    title="duplicate(self: VSliderPtr; obj: var VSliderObj): VSliderPtr"><wbr />duplicate<span class="attachedType">VSliderPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CVSliderPtr%2Cuint"
     title="setMaxValue(self: VSliderPtr; value: uint)"><wbr />set<wbr />Max<wbr />Value<span class="attachedType">VSliderPtr</span></a></li>
   <li><a class="reference" href="#setProgress.e%2CVSliderPtr%2Cuint"
@@ -187,14 +187,31 @@ function main() {
 <dt><pre><span class="Keyword">proc</span> <a href="#VSlider%2Cstring%2CVSliderObj"><span class="Identifier">VSlider</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new VSlider pointer.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VSliderObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">sliderobj</span><span class="Other">:</span> <span class="Identifier">VSliderObj</span>
+  <span class="Identifier">slider</span> <span class="Other">=</span> <span class="Identifier">VSlider</span><span class="Other">(</span><span class="StringLit">&quot;VSlider&quot;</span><span class="Other">,</span> <span class="Identifier">sliderobj</span><span class="Other">)</span></pre>
 
 </dd>
 <a id="VSlider,VSliderObj"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#VSlider%2CVSliderObj"><span class="Identifier">VSlider</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Creates a new VSlider pointer with default node name &quot;VSlider&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VSliderObj variable.</li>
+</ul>
 
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">sliderobj</span><span class="Other">:</span> <span class="Identifier">VSliderObj</span>
+  <span class="Identifier">slider</span> <span class="Other">=</span> <span class="Identifier">VSlider</span><span class="Other">(</span><span class="Identifier">sliderobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -207,29 +224,29 @@ function main() {
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="dublicate.e,VSliderPtr,VSliderObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#dublicate.e%2CVSliderPtr%2CVSliderObj"><span class="Identifier">dublicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<a id="duplicate.e,VSliderPtr,VSliderObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVSliderPtr%2CVSliderObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vslider.html#VSliderObj"><span class="Identifier">VSliderObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Duplicates VSlider object and create a new VSlider pointer.
 
 </dd>
 <a id="setMaxValue.e,VSliderPtr,uint"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setMaxValue.e%2CVSliderPtr%2Cuint"><span class="Identifier">setMaxValue</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Changes max value, if it not less than progress.
 
 </dd>
 <a id="setProgress.e,VSliderPtr,uint"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setProgress.e%2CVSliderPtr%2Cuint"><span class="Identifier">setProgress</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vslider.html#VSliderPtr"><span class="Identifier">VSliderPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+Changes progress, if it not more than max value.
 
 </dd>
 <a id="setProgressColor.e,VSliderPtr,ColorRef"></a>
@@ -244,7 +261,7 @@ Changes progress color. For change background color use <tt class="docutils lite
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-
+handles user input. This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
 
@@ -257,7 +274,7 @@ Changes progress color. For change background color use <tt class="docutils lite
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 04:17:06 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:56:52 UTC</small>
       </div>
     </div>
   </div>
